一些问题修改

--- a/html/card/index.html
+++ b/html/card/index.html
@@ -108,45 +108,57 @@
 			
 			.slider-li .slider-icon{
 				display: inline-block;
-				width: 28px;
+				width: 30px;
 				height: 28px;
-				background-size: 175px 62px;
-				background-image: url(../../images/card-nav.png);
 				background-repeat: no-repeat;
 			}
 			
 			.slider-icon.icon1{
-			    background-position: 2px 1px;
+			    background-image: url(../../images/cardIcon/001.png);
+			    background-size: 25px 25px;
+		        background-position: 2px 1px;
 			}
 			
 			.slider-icon.icon2{
-		       background-position: -34px 1px;
+		       background-image: url(../../images/cardIcon/002.png);
+		       background-size: 30px 23px;
+		       background-position: 0px 3px;
 			}
 			
 			.slider-icon.icon3{
-			    background-position: -69px 1px;
+			    background-image: url(../../images/cardIcon/003.png);
+				background-size: 29px 26px;
+				background-position: 0px 0px;
 			}
 
-			.slider-icon.icon4{
-			    background-position: -108px 1px;
+			.slider-icon.icon4 {
+				background-image: url(../../images/cardIcon/004.png);
+				background-size: 23px 26px;
+				background-position: 5px 0px;
 			}
-
-			.slider-icon.icon5{
-				background-position: 1px -34px;
+			
+			.slider-icon.icon5 {
+				background-image: url(../../images/cardIcon/005.png);
+				background-size: 24px 27px;
+				background-position: 3px 0px;
 			}
-
-			.slider-icon.icon6{
-				background-position: -34px -34px;
+			
+			.slider-icon.icon6 {
+				background-image: url(../../images/cardIcon/006.png);
+				background-size: 25px 25px;
+				background-position: 2px 1px;
 			}
-
-			.slider-icon.icon7{
-				background-position: -70px -35px;
+			
+			.slider-icon.icon7 {
+				background-image: url(../../images/cardIcon/007.png);
+				background-size: 36px 28px;
+				background-position: -3px 0px;
 			}
-
-			.slider-icon.icon8{
-				background-position: -106px -34px;
+			
+			.slider-icon.icon8 {
+				background-image: url(../../images/cardIcon/008.png);
+				background-size: 28px 30px;
 			}
-
 			.slider-icon.icon9{
 				background-position: -147px -33px;
 			}
