--- a/html/public/articleDetail.html
+++ b/html/public/articleDetail.html
@@ -37,6 +37,7 @@
 				/*Opera7*/
 				word-wrap: break-word;
 				/*InternetExplorer5.5+*/
+			    margin: 10px auto;
 			}
 			
 			.mui-content .kr-article-article img {
@@ -221,11 +222,6 @@
 	</head>
 
 	<body>
-		<header class="mui-bar mui-bar-nav article-detail-header">
-			<h1 id="title" class="mui-title mui-clearfix">
-				<span class="text">内容页</span>				
-			</h1>
-		</header>
 		<div class="mui-content article-detail-wrapper mui-scroll-wrapper" id="articleDetailWrapper">
 			<div class="mui-scroll">
 				<div class="kr-article-content">
