--- a/html/public/articleList.html
+++ b/html/public/articleList.html
@@ -64,7 +64,7 @@
 				display: inline-block;
 				padding: 10px 0 0 0px;
 				text-align: center;
-				vertical-align: middle;
+				vertical-align: bottom;
 				background: 0 0;
 			}
 			
@@ -83,7 +83,7 @@
 			}
 			
 			.closeempty {
-				color: #dedede;
+				color: #999;
 			}
 			
 			.mui-popover .remove-box {
@@ -261,7 +261,7 @@
 					if(session && session.userId) {
 						$li.find('p.mui-ellipsis').append('<p class="mui-pull-right closeempty">...</p>');
 					}
-
+					
 					if(position == 'before') {
 						table.prepend($li);
 					} else {
