--- a/index.html
+++ b/index.html
@@ -143,11 +143,11 @@
 			}
 			
 			.logo-text{
-				width: 80px;
+				width: 100px;
 				height: 100%;
-			    background: url('./images/logo_text.png') no-repeat;
-			    background-position: 0;
-			    background-size: 61px 30px;
+			    background: url('./images/logo_text1.png') no-repeat;
+			    /*background-position: 0;*/
+			    /*background-size: 61px 30px;*/
 			}
 			
 			.mui-icon-search{
