--- a/html/public/searchList.html
+++ b/html/public/searchList.html
@@ -171,12 +171,14 @@
 				<a class="remove-item" href="javascript:;">不想看：科技</a>
 			</div>
 		</div>
-		<script src="../../vendor/jQuery/jquery.js"></script>
 		<script src="../../js/mui.min.js"></script>
+		<script src="../../js/main.js"></script>
+		<script src="../../vendor/jQuery/jquery.js"></script>
 		<script src="../../js/vue.min.js"></script>
 		<script>
 			var pageNum = 0,
-				pageSize = 10;
+				pageSize = 10,
+				urlHead = tech.urlHead;
 			mui.init({
 				pullRefresh: {
 					container: '#articleList',				
@@ -365,7 +367,7 @@
 				}
 				plus.nativeUI.showWaiting();
 				//屏蔽文章
-				mui.ajax('http://58.16.181.24:9203/mis-app/Science/formProcessing', {
+				mui.ajax(urlHead + '/Science/formProcessing', {
 					data: param,
 					success: function(result) {
 						plus.nativeUI.closeWaiting();
@@ -425,7 +427,7 @@
 					param.user_id = session.userId;
 				}
 				
-				mui.ajax('http://58.16.181.24:9203/mis-app/VisitingCard/articleType', {
+				mui.ajax(urlHead + '/VisitingCard/articleType', {
 					data: param,
 					type: 'post', //HTTP请求类型
 					success: function(result) {
