--- a/index.html
+++ b/index.html
@@ -145,9 +145,8 @@
 			.logo-text{
 				width: 100px;
 				height: 100%;
-			    background: url('./images/logo_text1.png') no-repeat;
-			    /*background-position: 0;*/
-			    /*background-size: 61px 30px;*/
+			    background: url('./images/logo_text1.png') no-repeat;			
+			    background-size: 87px 43px;    
 			}
 			
 			.mui-icon-search{
