--- a/html/index/plus_channel.html
+++ b/html/index/plus_channel.html
@@ -242,9 +242,11 @@
 		</div>
 		<script src="../../js/mui.min.js"></script>
 		<script src="../../js/sortable.js"></script>
+		<script src="../../js/main.js"></script>
 		<script src="../../vendor/jQuery/jquery.min.js"></script>
 		<script type="text/javascript">
-			var changed = false;
+			var changed = false,
+				urlHead = tech.urlHead;
 			mui.init({
 				gestureConfig: {
 					longtap: true,
@@ -344,7 +346,7 @@
 
 			function getChannels() {
 				var session = JSON.parse(localStorage.getItem('$state'));
-				mui.ajax('http://58.16.181.24:9203/mis-app/Personal/mychannel', {
+				mui.ajax(urlHead + '/Personal/mychannel', {
 					data: {
 						"user_id": session.userId,
 						"jdbcTemplateName": "mysqlTemplate",
@@ -412,7 +414,7 @@
 					return;
 				}
 				plus.nativeUI.showWaiting();
-				mui.ajax('http://58.16.181.24:9203/mis-app/Personal/formProcessing', {
+				mui.ajax(urlHead + '/Personal/formProcessing', {
 					data: {
 						"jdbcTemplateName": "mysqlTemplate,mysqlTemplate",
 						"pFile": "Personal,Personal",
@@ -472,7 +474,7 @@
 						return ;
 					}
 					plus.nativeUI.showWaiting();
-					mui.ajax('http://58.16.181.24:9203/mis-app/Personal/formProcessing', {
+					mui.ajax( urlHead + '/Personal/formProcessing', {
 						data: {
 							"user_id": session.userId,
 							"channel_id": channelId,
