--- a/html/login/login.html
+++ b/html/login/login.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html class="ui-page-login">
-
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
@@ -99,6 +98,7 @@
 		<script src="../../js/mui.min.js"></script>
 		<script src="../../js/mui.enterfocus.js"></script>
 		<script src="../../js/md5.min.js"></script>
+		<script src="../../js/main.js"></script>
 		<script src="../../js/app.js"></script>
 		<script>
 			(function($, doc) {
