--- a/html/myCenter/userSet.html
+++ b/html/myCenter/userSet.html
@@ -105,6 +105,7 @@
 			</ul>
 		</div>
 		<script src="../../js/mui.min.js"></script>
+		<script src="../../js/main.js"></script>
 		<script type="text/javascript">
 			mui.init({
 				preloadPages: [{
@@ -282,7 +283,7 @@
 				var url = e.detail.dataUrl;
 				var state = JSON.parse(localStorage.getItem('$state'));
 				state.personImages = url;
-				mui.ajax('http://58.16.181.24:9203/mis-app/Personal/formProcessing', {
+				mui.ajax( tech.urlHead + '/Personal/formProcessing', {
 					data: {
 						"id": state.userId,
 						"jdbcTemplateName": "mysqlTemplate",
