--- a/html/scientistStory/index.html
+++ b/html/scientistStory/index.html
@@ -347,6 +347,7 @@
 			</div>
 		</div>
 		<script src="../../js/mui.min.js"></script>
+		<script src="../../js/main.js"></script>
 		<script src="../../vendor/jQuery/jquery.js"></script>
 		<script src="../../js/mui.zoom.js"></script>
 		<script src="../../js/mui.previewimage.js"></script>
@@ -423,7 +424,7 @@
 					param.current_time = newDate.trim();
 				}
 
-				mui.ajax('http://58.16.181.24:9203/mis-app/ScienceStory/pageSearch', {
+				mui.ajax(tech.urlHead + '/ScienceStory/pageSearch', {
 					data: param,
 					success: function(result) {
 						plus.nativeUI.closeWaiting();
@@ -452,10 +453,10 @@
 			function addData(list, position) {
 				var table = document.body.querySelector('.mui-table-view');
 				for(var i = 0; i < list.length; i++) {
-					var li = document.createElement('li');
-						li.className = 'mui-table-view-cell mui-media',
+					var li = document.createElement('li'),						
 						personImage = list[i].personimages ? list[i].personimages : "../../images/default_user.png",
 						userName = list[i].username ? $.trim(list[i].username) : "&nbsp;";
+					li.className = 'mui-table-view-cell mui-media',
 						
 					$(li).data('data', list[i]);
 					var _card = '';
@@ -477,15 +478,9 @@
 							reduceList = reduceList.split(',');
 						}
 						var imgLength = imgList.length;
-//							className = "";
-						//
-//						if(imgLength % 2 == 0 && imgLength <= 4) {
-//							className = "mui-col-sm-6 mui-col-xs-6";
-//						} else if(imgLength > 　1) {
-//							className = "mui-col-sm-4 mui-col-xs-4";
-//						}
-						if(imgLength == 1) {
-							var imgSrc = (reduceList && reduceList.length > 0) ? reduceList[0] : imgLength[0]
+
+						if(imgLength == 1) {							
+							var imgSrc = (reduceList && reduceList.length > 0) ? reduceList[0] : imgLength[0];							
 							_card += '<div class="mui-row"><div class="mui-col-sm-8 mui-col-xs-8">' 
 										+ '<img src="' + imgSrc + '" data-preview-src="' + imgList[0] + '" data-preview-group="' + list[i].id + '"/>' 
 									+ '</div></div>';
@@ -509,9 +504,7 @@
 						_card += '</div>';
 					}
 					_card += '</div>';
-					//						_card += '<div class="mui-status-bottom">';
-					//						_card += '<span class="mui-status-item">浏览量：<span class="number">' + list[i].page_view + '</span></span>';						
-					//						_card += '</div>';
+			
 					_card += '</a>';
 					li.innerHTML = _card;					
 					$(li).find('.text-content').on('tap', toDetailPage);
