接口统一修改

--- a/html/myCenter/index.html
+++ b/html/myCenter/index.html
@@ -84,7 +84,7 @@
 							<img id="head-img" class="userImg">
 						</div>
 						<div class="mui-media-body noLoginBox" style="display: none;">
-							登录科技头条 体验更多功能
+							登录聚科技，体验更多功能
 						</div>
 						<div class="mui-media-body userNameBox">
 							<h4 class="userName" id="userName"></h4>
