--- a/html/myCenter/feedback.html
+++ b/html/myCenter/feedback.html
@@ -129,6 +129,7 @@
 			</div><br />-->
 		</div>
 		<script src="../../js/mui.min.js"></script>
+		<script src="../../js/main.js"></script>
 		<script src="../../js/feedback.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript">
 			mui.init();
